fix sql olap-schema.sql not loading on startup